--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Blocktank</title>
+
+<!--    <script>-->
+<!--      window.embedwidget = true;-->
+<!--    </script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
