--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,24 @@
       name="description"
       content="Blocktank"
     />
-<!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
+
+    <meta name="description" content="Your full-service Lightning Service Provider (LSP)" />
+    <meta name="image" content="https://blocktank.synonym.to/blocktank.png" />
+    <title>Blocktank</title>
+
+    <meta property="og:title" content="Blocktank" />
+    <meta
+      property="og:description"
+      content="Your full-service Lightning Service Provider (LSP)"
+    />
+    <meta property="og:url" content="blocktank.synonym.to" />
+    <meta property="og:image" content="https://blocktank.synonym.to/blocktank.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <meta property="og:site_name" content="Blocktank" />
+
+
+    <!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
