Preloading fonts and fallback options

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,36 @@
 
     <meta property="og:site_name" content="Blocktank" />
 
+    <link rel="preload" href="/fonts/NeueHaasDisplay-Thin.woff2" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="/fonts/NeueHaasDisplay-Roman.woff2" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="/fonts/NeueHaasDisplay-Medium.woff2" as="font" type="font/woff" crossorigin>
+
+    <style rel="preload" type='text/css'>
+      @font-face {
+        font-family: 'Neue Haas Grotesk Display Pro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 200;
+        src: url('/fonts/NeueHaasDisplay-Thin.woff2') format('woff2')
+      }
+
+      @font-face {
+        font-family: 'Neue Haas Grotesk Display Pro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 400;
+        src: url('/fonts/NeueHaasDisplay-Roman.woff2') format('woff2')
+      }
+
+      @font-face {
+        font-family: 'Neue Haas Grotesk Display Pro';
+        font-style: normal;
+        font-display: swap;
+        font-weight: 600;
+        src: url('/fonts/NeueHaasDisplay-Medium.woff2') format('woff2')
+      }
+    </style>
+
 
     <!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <!--
