Meta tag image location fix

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
 
     <meta name="description" content="Your full-service Lightning Service Provider (LSP)" />
-    <meta name="image" content="https://blocktank.synonym.to/blocktank.png" />
+    <meta name="image" content="https://widget.synonym.to/blocktank.png" />
     <title>Blocktank</title>
 
     <meta property="og:title" content="Blocktank" />
@@ -19,8 +19,8 @@
       property="og:description"
       content="Your full-service Lightning Service Provider (LSP)"
     />
-    <meta property="og:url" content="blocktank.synonym.to" />
-    <meta property="og:image" content="https://blocktank.synonym.to/blocktank.png" />
+    <meta property="og:url" content="widget.synonym.to" />
+    <meta property="og:image" content="https://widget.synonym.to/blocktank.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta property="og:site_name" content="Blocktank" />
