Meta description update

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
       content="Blocktank"
     />
 
-    <meta name="description" content="Your full-service Lightning Service Provider (LSP)" />
+    <meta name="description" content="Blocktank is an LSP that allows businesses, apps, or online platforms to integrate, automate, and monetize services from your Lightning node. This includes channel configuration, channel purchases, channel info and more." />
     <meta name="image" content="https://widget.synonym.to/blocktank.png" />
     <title>Blocktank</title>
 
     <meta property="og:title" content="Blocktank" />
     <meta
       property="og:description"
-      content="Your full-service Lightning Service Provider (LSP)"
+      content="Blocktank is an LSP that allows businesses, apps, or online platforms to integrate, automate, and monetize services from your Lightning node. This includes channel configuration, channel purchases, channel info and more."
     />
     <meta property="og:url" content="widget.synonym.to" />
     <meta property="og:image" content="https://widget.synonym.to/blocktank.png" />
